# 3d-portal

./: .dockerignore  .gitignore  .semgrepignore  AGENTS.md  CLAUDE.md  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config_for_tests.py  main.py  router.py
apps/api/app/core/: audit.py  config.py  etag.py  filenames.py  logging.py  observability.py  redis.py  sentry.py
apps/api/app/core/auth/: cookies.py  csrf.py  dependencies.py  jwt.py  middleware.py  password.py  ratelimit.py  refresh.py
apps/api/app/core/db/: models.py  seed.py  session.py
apps/api/app/modules/admin/: router.py  users_schemas.py
apps/api/app/modules/auth/: models.py  router.py
apps/api/app/workers/: __init__.py  cleanup_refresh_tokens.py  generate_thumbnail.py  spoolman_poll.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_thumbnailoverride.py  0003_renderselection.py  0004_entity_tables.py  0005_user_uuid_audit_log.py  0006_model_file_position.py  0007_model_file_selected_for_render.py  0008_drop_legacy_tables.py  0009_refresh_tokens.py  0010_drop_model_legacy_id.py  0011_index_ext_link_url.py  0011_index_model_external_link_url.py  0012_invite_tokens.py  0013_users_2fa_columns.py  0014_users_is_active_last_active.py  0015_users_force_2fa_enrollment.py  0016_refresh_token_revoke_reasons_e8.py  0017_model_note_bilingual.py  0018_facet_tags.py  0019_drop_category.py
apps/api/scripts/: backfill_iso_thumbnail.py  backfill_legacy_renders.py  backfill_thumbnails.py  bootstrap_agent.py  data_quality_report.py  enqueue_default_matrix_backfill.py  enqueue_estimate_backfill.py  enqueue_thumbnail_backfill.py  fix_legacy_render_names.py  hydrate_local_tree.py  migrate_from_index_json.py  seed_taxonomy.py  tag_translations.py
apps/api/tests/: _test_helpers.py  conftest.py  test_2fa_disable.py  test_2fa_enrollment.py  test_2fa_regenerate.py  test_2fa_schema.py  test_2fa_verify.py  test_admin_audit.py  test_admin_password_reset_mint.py  test_admin_profile_library.py  test_admin_profile_offers.py  test_admin_profile_publish.py  test_admin_profiles_import.py  test_admin_profiles_inventory.py  test_admin_queues_snapshot.py  test_admin_refresh.py  test_admin_render.py  test_admin_render_selection.py  test_admin_render_sot.py  test_admin_sentry_test_endpoint.py  test_admin_thumbnail.py  test_admin_users_2fa_overrides.py  test_admin_users_list.py  test_admin_users_mutations.py  test_audit.py  test_auth.py  test_auth_deactivated_user.py  test_auth_dependencies.py  test_auth_dependency.py  test_auth_jwt.py  test_auth_login_logout.py  test_auth_me_display_name.py  test_auth_password_reset_consume.py  test_auth_refresh.py  test_auth_sessions.py  test_backfill_iso_thumbnail.py  test_backfill_legacy_renders.py  test_backfill_thumbnails.py  test_bootstrap_agent.py  test_catalog_models.py  (+107 more)
apps/api/tests/fixtures/: index.json
docs/: index.md  (+8 more)
workers/render/: .dockerignore  Dockerfile  pyproject.toml
workers/render/render/: config.py  observability.py  sentry.py  trimesh_render.py  worker.py
workers/render/tests/: conftest.py  test_sentry_capture.py  test_trimesh_render.py  test_worker.py  test_worker_sot.py
(+968 files in other folders)
