[project]
name = "portal-render"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26",
    "redis>=5.2",
    "trimesh>=4.5",
    "numpy>=2.1",
    "matplotlib>=3.9",
    "pillow>=11.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # OTel contrib/instrumentation packages have no stable 1.x yet; 0.5xb pins are intentional.
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-redis>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "fakeredis>=2.26",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
